src/components/side-bar/side-bar.module.css
@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");

.root {
  width: 100%;
  height: 100vh;
  border-right: var(--size0) solid var(--outlineColor);
  display: flex;
  flex-direction: column;
}

.top {
  display: flex;
  padding: 10px var(--size3);
  max-height: var(--sectionHeight);
  border-bottom: var(--size0) solid var(--outlineColor);
}

.logo {
  width: 80%;
}

.content {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(var(--gridsize), 1fr));
  grid-auto-rows: minmax(var(--gridsize), 1fr);
  max-height: calc(100vh - var(--size11) - var(--size11));
  overflow: auto;
}

.color {
  cursor: pointer;
  border: none;
  background: none;
  border: 1px solid var(--outlineColor);
}

.selected {
  box-sizing: border-box;
  border: 4px solid white;
}

.header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 30px;
}

.wrapper {
  display: flex;
  flex-direction: column;
  width: 100px;
  justify-content: center;
  align-items: flex-start;
  padding: var(--size2);
  font-weight: bold;
  cursor: pointer;
}

.wrapper:hover {
  background-color: #f0f0f0;
}

.panel {
  border-top: 1px solid var(--outlineColor);
}

:global(.ant-collapse-header) {
  padding: var(--size2) var(--size3);
  border-bottom: 2px solid var(--outlineColor);
  background-color: white;
  align-items: center;
  font-weight: bold;
  position: sticky;
  display: flex;
  top: 0;
}

